[gd_scene load_steps=57 format=2]

[ext_resource path="res://Tree/Interface/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://SceneComponent/Interface/BackgroundCycler/BackgroundCycler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Interface/MainMoonwardsTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Interface/Textures/MoonwardsLogo2020_HeavyOutline_500px.png" type="Texture" id=4]
[ext_resource path="res://Tree/Interface/MainMenu/About/About.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tree/Interface/UserSettings/UserSettings.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconAbout_Menu.png" type="Texture" id=11]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconSettings_Menu.png" type="Texture" id=12]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconPower_Menu.png" type="Texture" id=13]
[ext_resource path="res://Assets/Interface/Fonts/ThemeForFont/Minus7.tres" type="Theme" id=14]
[ext_resource path="res://Assets/Interface/MainMenu/Style/MM_Theme_Header.tres" type="Theme" id=16]
[ext_resource path="res://Tree/Interface/MainMenu/MenuParent.gd" type="Script" id=17]
[ext_resource path="res://SceneComponent/Interface/MainMenu/Destination.tscn" type="PackedScene" id=18]
[ext_resource path="res://Tree/Interface/MainMenu/QuitMenu.gd" type="Script" id=19]
[ext_resource path="res://SceneComponent/Interface/GraphicsSettings/GraphicsSettings.tscn" type="PackedScene" id=20]
[ext_resource path="res://SceneComponent/Interface/CustomControls/CustomControls.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/Interface/MainMenu/Style/MM_Empty.tres" type="StyleBox" id=22]
[ext_resource path="res://Assets/Interface/MainMenu/Style/MM_PanelMain.tres" type="StyleBox" id=23]
[ext_resource path="res://Tree/Interface/MainMenu/SettingsMenu.gd" type="Script" id=24]
[ext_resource path="res://Tree/Interface/MainMenu/FullWindow.gd" type="Script" id=25]
[ext_resource path="res://Tree/Interface/MainMenu/Apps.gd" type="Script" id=26]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconAI.png" type="Texture" id=27]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconBuilding_Alt.png" type="Texture" id=29]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconEvent.png" type="Texture" id=30]
[ext_resource path="res://Assets/Interface/Textures/MaterialDesign/T_IconLibrary.png" type="Texture" id=31]
[ext_resource path="res://SceneComponent/Interface/Hud/Apps/NPC/NPCApp.tscn" type="PackedScene" id=32]
[ext_resource path="res://Tree/Interface/MainMenu/Links.gd" type="Script" id=34]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/21.png" type="Texture" id=35]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/18.png" type="Texture" id=36]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/23.png" type="Texture" id=37]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/20.png" type="Texture" id=38]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/17.png" type="Texture" id=39]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/15.png" type="Texture" id=40]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/11.png" type="Texture" id=41]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/14.png" type="Texture" id=42]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/3.png" type="Texture" id=43]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/4.png" type="Texture" id=44]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/5.png" type="Texture" id=45]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/6.png" type="Texture" id=46]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/8.png" type="Texture" id=47]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/19.png" type="Texture" id=48]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/9.png" type="Texture" id=49]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/13.png" type="Texture" id=50]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/1.png" type="Texture" id=51]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/2.png" type="Texture" id=52]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/16.png" type="Texture" id=53]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/10.png" type="Texture" id=54]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/12.png" type="Texture" id=55]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/7.png" type="Texture" id=56]
[ext_resource path="res://Assets/Interface/Textures/MainMenuBackgrounds/22.png" type="Texture" id=57]
[ext_resource path="res://Assets/Interface/MoonwardsPrimeButton.tres" type="Theme" id=62]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 6
border_width_top = 6
border_width_right = 2
border_width_bottom = 6
border_color = Color( 0.717647, 0.717647, 0.717647, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0
shadow_color = Color( 0.227451, 0.227451, 0.227451, 0.6 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.807843 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0.937255 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.717647, 0.717647, 0.717647, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_color = Color( 0.227451, 0.227451, 0.227451, 0.6 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="MainMenu" type="CanvasLayer" groups=[
"MainMenu",
]]
layer = 10
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]
image_wait_time = 6.0
textures = [ ExtResource( 46 ), ExtResource( 48 ), ExtResource( 52 ), ExtResource( 40 ), ExtResource( 36 ), ExtResource( 45 ), ExtResource( 57 ), ExtResource( 43 ), ExtResource( 37 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 41 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 51 ), ExtResource( 39 ), ExtResource( 56 ), ExtResource( 50 ), ExtResource( 42 ), ExtResource( 49 ), ExtResource( 55 ) ]

[node name="VBoxContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 3 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
anchor_top = -0.016
anchor_right = 0.405
anchor_bottom = 0.215
margin_left = 1.97089
margin_top = 4.16315
margin_right = -1.78918
margin_bottom = -15.5969
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabButtons" type="HBoxContainer" parent="VBoxContainer"]
anchor_left = 0.27
anchor_top = 0.173
anchor_right = 1.0
anchor_bottom = 0.21
grow_vertical = 0
size_flags_horizontal = 7
size_flags_vertical = 8
theme = ExtResource( 16 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Home" type="Button" parent="VBoxContainer/TabButtons"]
visible = false
margin_right = 52.0
margin_bottom = 78.0
focus_neighbour_right = NodePath("../Button_Avatar")
size_flags_horizontal = 3
text = "HOME"

[node name="Button_Destination" type="Button" parent="VBoxContainer/TabButtons"]
margin_right = 444.0
margin_bottom = 43.0
focus_neighbour_right = NodePath("../Button_Apps")
size_flags_horizontal = 3
text = "PLAY"

[node name="Button_Avatar" type="Button" parent="VBoxContainer/TabButtons"]
margin_left = 464.0
margin_right = 908.0
margin_bottom = 43.0
grow_horizontal = 2
focus_neighbour_right = NodePath("../Button_Destination")
size_flags_horizontal = 3
text = "AVATAR"

[node name="Button_Apps" type="Button" parent="VBoxContainer/TabButtons"]
margin_left = 928.0
margin_right = 1372.0
margin_bottom = 43.0
focus_neighbour_right = NodePath("../Button_Settings")
size_flags_horizontal = 3
text = "APPS"

[node name="Button_Settings" type="Button" parent="VBoxContainer/TabButtons"]
visible = false
margin_left = 266.0
margin_right = 338.0
margin_bottom = 78.0
focus_neighbour_right = NodePath("../../HBoxContainer_Right/Button_About")
size_flags_horizontal = 3
text = "SETTINGS"

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
anchor_top = 0.212
anchor_right = 1.0
anchor_bottom = 0.96
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 23 )
tabs_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Destination" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 62 )

[node name="Destination" parent="VBoxContainer/TabContainer/Destination" instance=ExtResource( 18 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1876.0
margin_bottom = 773.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Home" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Avatar" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UserSettings" parent="VBoxContainer/TabContainer/Avatar" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1876.0
margin_bottom = 773.0

[node name="Apps" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 62 )
script = ExtResource( 26 )

[node name="ButtonGrid" type="GridContainer" parent="VBoxContainer/TabContainer/Apps"]
margin_right = 1876.0
margin_bottom = 773.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 14
custom_constants/hseparation = 14
columns = 2

[node name="NpcEditor" type="Button" parent="VBoxContainer/TabContainer/Apps/ButtonGrid"]
margin_right = 931.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/NpcEditor"]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.55
margin_top = -0.943878
margin_bottom = -0.943878
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 27 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/NpcEditor"]
anchor_top = 0.917
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 10
text = "MAKE ENTITY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Building" type="Button" parent="VBoxContainer/TabContainer/Apps/ButtonGrid"]
margin_left = 945.0
margin_right = 1876.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Building"]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.55
margin_top = -0.943878
margin_bottom = -0.943878
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 29 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Building"]
anchor_top = 0.917
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 10
text = "MAKE BUILDING"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Events" type="Button" parent="VBoxContainer/TabContainer/Apps/ButtonGrid"]
margin_top = 393.0
margin_right = 931.0
margin_bottom = 772.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Events"]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.55
margin_top = -0.943878
margin_bottom = -0.943878
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 30 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Events"]
anchor_top = 0.917
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 10
text = "SETUP EVENT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Library" type="Button" parent="VBoxContainer/TabContainer/Apps/ButtonGrid"]
margin_left = 945.0
margin_top = 393.0
margin_right = 1876.0
margin_bottom = 772.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Library"]
anchor_left = 0.35
anchor_top = 0.15
anchor_right = 0.65
anchor_bottom = 0.55
margin_top = -0.943878
margin_bottom = -0.943878
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 31 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Apps/ButtonGrid/Library"]
anchor_top = 0.917
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 10
text = "OPEN LIBRARY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 24 )

[node name="HBoxContainer_Settings_Tab" type="HBoxContainer" parent="VBoxContainer/TabContainer/Settings"]
margin_right = 1876.0
margin_bottom = 45.0
size_flags_horizontal = 3
theme = ExtResource( 16 )
custom_constants/separation = 20

[node name="Button_Sett_Visual" type="Button" parent="VBoxContainer/TabContainer/Settings/HBoxContainer_Settings_Tab"]
margin_right = 306.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "VISUALS"

[node name="Button_Sett_Controls" type="Button" parent="VBoxContainer/TabContainer/Settings/HBoxContainer_Settings_Tab"]
margin_left = 326.0
margin_right = 632.0
margin_bottom = 45.0
size_flags_horizontal = 3
text = "CONTROLS"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TabContainer/Settings/HBoxContainer_Settings_Tab"]
margin_left = 652.0
margin_right = 1876.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_styles/separator = ExtResource( 22 )

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/TabContainer/Settings"]
margin_top = 49.0
margin_right = 1876.0
margin_bottom = 773.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 23 )
tabs_visible = false

[node name="VBoxContainer_Sett_Visuals" type="VBoxContainer" parent="VBoxContainer/TabContainer/Settings/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="VBoxContainer/TabContainer/Settings/TabContainer/VBoxContainer_Sett_Visuals" instance=ExtResource( 20 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1872.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer_Sett_Controls" type="VBoxContainer" parent="VBoxContainer/TabContainer/Settings/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" parent="VBoxContainer/TabContainer/Settings/TabContainer/VBoxContainer_Sett_Controls" instance=ExtResource( 21 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1864.0
margin_bottom = 726.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" parent="VBoxContainer/TabContainer/About" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1856.0
margin_bottom = 772.0

[node name="Quit" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 19 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TabContainer/Quit"]
margin_top = 374.0
margin_right = 1876.0
margin_bottom = 398.0
size_flags_horizontal = 7
size_flags_vertical = 4
alignment = 1

[node name="Button_Quit_Yes" type="Button" parent="VBoxContainer/TabContainer/Quit/HBoxContainer"]
margin_left = 887.0
margin_right = 924.0
margin_bottom = 24.0
text = "Quit"

[node name="Button_Quit_No" type="Button" parent="VBoxContainer/TabContainer/Quit/HBoxContainer"]
margin_left = 928.0
margin_right = 989.0
margin_bottom = 24.0
text = "Cancel"

[node name="AboutSection" type="Control" parent="VBoxContainer"]
anchor_top = 0.98
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAndLinks" type="HBoxContainer" parent="VBoxContainer/AboutSection"]
anchor_right = 0.5
custom_constants/separation = 8
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Version" type="Label" parent="VBoxContainer/AboutSection/LabelAndLinks"]
margin_right = 232.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Game Version 0.0.1     Sites:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Source" type="Button" parent="VBoxContainer/AboutSection/LabelAndLinks"]
margin_left = 240.0
margin_right = 409.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Github"

[node name="Twitter" type="Button" parent="VBoxContainer/AboutSection/LabelAndLinks"]
margin_left = 417.0
margin_right = 586.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Twitter"

[node name="Reddit" type="Button" parent="VBoxContainer/AboutSection/LabelAndLinks"]
margin_left = 594.0
margin_right = 763.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Reddit"
__meta__ = {
"_editor_description_": ""
}

[node name="Discord" type="Button" parent="VBoxContainer/AboutSection/LabelAndLinks"]
margin_left = 771.0
margin_right = 940.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Discord"
__meta__ = {
"_editor_description_": ""
}

[node name="Label_Info" type="Label" parent="VBoxContainer/AboutSection"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
text = "Created by Kim Holder, 2019-2020, MIT Licensed"

[node name="TRButtons" type="HBoxContainer" parent="VBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource( 16 )
custom_constants/separation = 4
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Settings_Icon" type="Button" parent="VBoxContainer/TRButtons"]
margin_right = 54.0
margin_bottom = 57.0
focus_neighbour_right = NodePath("../Button_Quit")
icon = ExtResource( 12 )

[node name="Button_About_Icon" type="Button" parent="VBoxContainer/TRButtons"]
margin_left = 58.0
margin_right = 112.0
margin_bottom = 57.0
focus_neighbour_right = NodePath("../Button_Quit")
icon = ExtResource( 11 )

[node name="Button_Quit_Icon" type="Button" parent="VBoxContainer/TRButtons"]
margin_left = 116.0
margin_right = 170.0
margin_bottom = 57.0
focus_neighbour_right = NodePath("../../HBoxContainer_Middle/Button_Home")
icon = ExtResource( 13 )

[node name="FullWindow" type="Tabs" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 25 )

[node name="NPCEditor" parent="FullWindow" instance=ExtResource( 32 )]
theme = ExtResource( 14 )

[node name="Logo" type="TextureRect" parent="."]
visible = false
margin_right = 385.0
margin_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 7
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
visible = false
anchor_top = 0.92
anchor_right = 0.07
anchor_bottom = 1.0
grow_vertical = 0
rect_pivot_offset = Vector2( 53.8794, 87.2272 )
focus_neighbour_top = NodePath("../HBoxContainer/VBoxContainer/Display")
focus_neighbour_right = NodePath("../About")
focus_neighbour_bottom = NodePath("../HBoxContainer/VBoxContainer/Destination")
theme = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="."]
visible = false
anchor_left = 0.93
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 53.8794, 87.2272 )
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../HBoxContainer/VBoxContainer/Other")
focus_neighbour_bottom = NodePath("../HBoxContainer/VBoxContainer/StartGame")
theme = ExtResource( 3 )
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
